testsuite/poke.pkl/trim-diag-1.pk
/* { dg-do compile } */

var a = [1,2]["foo":10]; /* { dg-error "invalid index.*\n.*expected integral" } */
